--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body> 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <a class="navbar-brand" href="#">
-        <img  src="images/TT logo (1).png"  class="img-fluid" width="150px"  alt="logo"><strong></strong>
+       <img  src="images/TT logo (1).png"  class="img-responsive" width="150px"  alt="logo"><strong></strong>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
       </div>
     </nav>
     <br/>
-    
+    <br/>
     <div class="image">
       <img src="images/headerBanner1.png" alt="image" width="1600px"> 
     </div>
